# habits-to-streaks

./: main.py  pyproject.toml
src/habits_to_streaks/: cli.py  converter.py  models.py
tests/: test_converter.py
